# python-translator

./: README.md  pyproject.toml  translator.py
data/: in.txt  out.txt
