[tool.poetry]
name = "python-translator"
version = "0.1.0"
description = "Translate words in a specific format using the Google Translate API"
authors = ["Karim-Valeev <karim.valeev.i@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
